include/rnet.h

typedef uint64_t rnet_runtime_t;
typedef uint64_t rnet_endpoint_t;
typedef uint64_t rnet_session_t;
typedef struct rnet_slice {
  const uint8_t *ptr;
  size_t len;
} rnet_slice_t;
typedef struct rnet_logger_v2 {
  uint32_t struct_size;
  uint32_t abi_version;
  rnet_log_v2_fn log;
  void *user_data;
  uint32_t min_level;
} rnet_logger_v2_t;
/* V5 appends runtime-wide endpoint and pending-handshake limits. */
typedef struct rnet_config_v5 {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t worker_threads;
  uint32_t event_queue_capacity;
  uint32_t write_queue_capacity;
  uint32_t max_body_len;
  uint32_t max_datagram_size;
  uint64_t max_event_bytes;
  uint64_t max_runtime_queued_bytes;
  uint64_t max_session_queued_bytes;
  uint32_t max_sessions_per_endpoint;
  uint32_t max_sessions_per_ip;
  uint32_t handshake_rate_per_ip;
  uint32_t handshake_burst_per_ip;
  uint32_t ipv6_admission_prefix_bits;
  uint64_t handshake_timeout_ms;
  uint64_t connect_timeout_ms;
  uint64_t dns_timeout_ms;
  uint64_t datagram_idle_timeout_ms;
  uint32_t allow_plaintext_business_data;
  uint32_t allow_legacy_unauthenticated_endpoints;
  uint64_t rekey_after_ms;
  uint64_t rekey_after_bytes;
  const rnet_logger_t *logger;
  const rnet_logger_v2_t *logger_v2;
  uint32_t tcp_nodelay;
  uint64_t tcp_send_buffer_bytes;
  uint64_t tcp_recv_buffer_bytes;
  uint32_t max_endpoints;
  uint32_t max_pending_handshakes;
} rnet_config_v5_t;
typedef struct rnet_client_security {
  uint32_t struct_size;
  uint32_t abi_version;
  rnet_slice_t local_private_key;
  /* Used as an exact pin when verify_server is NULL. */
  rnet_slice_t expected_server_public_key;
  rnet_peer_verify_fn verify_server;
  void *user_data;
} rnet_client_security_t;
typedef struct rnet_keypair {
  uint32_t struct_size;
  uint32_t abi_version;
  uint8_t private_key[32];
  uint8_t public_key[32];
} rnet_keypair_t;
uint32_t rnet_abi_version(void);
int32_t rnet_config_v5_init(rnet_config_v5_t *config);
int32_t rnet_keypair_generate(rnet_keypair_t *out);
int32_t rnet_keypair_from_private(rnet_slice_t private_key,
                                  rnet_keypair_t *out);
/* Thread-local UTF-8 diagnostic for the most recent failed call. The pointer is
 * valid until the next RNet call on the same thread and must not be freed. */
const char *rnet_last_error_message(void);
/* Additive configuration for game-stage queue budgets. Every zero queue field
 * selects the production default. The V1 layout remains frozen. */
typedef struct rnet_game_config_v2 {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t heartbeat_interval_ms;
  uint32_t heartbeat_timeout_ms;
  uint32_t allow_plaintext_business_data;
  uint32_t reserved;
  const rnet_config_v5_t *network_config;
  uint64_t realtime_max_queued_bytes;
  uint64_t realtime_max_session_queued_bytes;
  uint64_t realtime_max_keys_per_session;
  uint64_t realtime_flush_batch;
  uint64_t scheduled_max_queued_bytes;
  uint64_t scheduled_max_session_queued_bytes;
  uint64_t scheduled_max_queued_messages;
  uint64_t scheduled_flush_batch;
} rnet_game_config_v2_t;
typedef struct rnet_game_server_config {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t transport;
  uint32_t initial_encryption;
  rnet_slice_t bind_host; /* Numeric IPv4 or IPv6. */
  uint16_t bind_port;
  uint16_t reserved;
  rnet_slice_t local_private_key;
  uint64_t protocol_id;
  uint32_t protocol_version;
} rnet_game_server_config_t;
typedef struct rnet_game_client_config {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t transport;
  uint32_t reserved;
  rnet_slice_t remote_host; /* Hostname or numeric address. */
  uint16_t remote_port;
  uint16_t reserved2;
  rnet_slice_t join_ticket;
  uint64_t protocol_id;
  uint32_t protocol_version;
  uint32_t reserved3;
  uint64_t build_id;
  uint64_t capabilities;
} rnet_game_client_config_t;
/* Explicit wire-v4 range configs. The existing exact-version structs stay wire v3. */
typedef struct rnet_game_range_server_config {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t transport;
  uint32_t initial_encryption;
  rnet_slice_t bind_host;
  uint16_t bind_port;
  uint16_t reserved;
  rnet_slice_t local_private_key;
  uint64_t protocol_id;
  uint32_t min_version;
  uint32_t max_version;
} rnet_game_range_server_config_t;
typedef struct rnet_game_range_client_config {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t transport;
  uint32_t reserved;
  rnet_slice_t remote_host;
  uint16_t remote_port;
  uint16_t reserved2;
  rnet_slice_t join_ticket;
  uint64_t protocol_id;
  uint32_t min_version;
  uint32_t max_version;
  uint32_t reserved3;
  uint64_t build_id;
  uint64_t capabilities;
} rnet_game_range_client_config_t;
/* Additive advanced-event layout. Use rnet_game_poll_events_v2; token ownership
 * remains in the nested v1 event. */
typedef struct rnet_game_event_v2 {
  rnet_game_event_t event;
  uint64_t correlation_id;
} rnet_game_event_v2_t;
typedef struct rnet_game_send_options {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t has_sequence;
  uint32_t sequence;
  uint32_t has_tick;
  uint32_t tick;
  uint64_t correlation_id;
  uint32_t priority;
  /* Relative local queue lifetime; zero means no expiry. */
  uint64_t expiry_ms;
} rnet_game_send_options_t;
/* Quality loss is a UDP sequence-gap estimate; KCP reports retransmission,
 * not raw IP loss. TCP has neither loss nor retransmission availability. */
typedef struct rnet_game_quality {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t available;
  uint32_t grade;
  uint32_t basis;
  uint32_t has_udp_loss;
  uint32_t has_kcp_retransmissions;
  uint32_t udp_recent_loss_per_mille;
  uint32_t kcp_recent_retransmission_per_mille;
  uint64_t last_rtt_us;
  uint64_t smoothed_rtt_us;
  uint64_t jitter_us;
  uint64_t samples;
  uint64_t udp_expected;
  uint64_t udp_missing;
  uint64_t kcp_segments_sent;
  uint64_t kcp_retransmitted;
} rnet_game_quality_t;
/* Four-timestamp sample. Offset maps the client runtime-local monotonic clock
 * to the server runtime-local monotonic clock; never use it as UTC or trust. */
typedef struct rnet_game_clock_sync {
  uint32_t struct_size;
  uint32_t abi_version;
  uint32_t available; /* has_sample: 0 for server sessions or before the first sample */
  uint32_t reserved;
  int64_t server_minus_client_us;
  uint64_t rtt_us;
  uint64_t samples;
} rnet_game_clock_sync_t;
typedef struct rnet_game_buffer {
  uint32_t struct_size;
  uint32_t abi_version;
  const uint8_t *data;
  size_t len;
  uint64_t token;
} rnet_game_buffer_t;
int32_t rnet_game_config_v2_init(rnet_game_config_v2_t *out);
int32_t rnet_game_runtime_create_v2(
    const rnet_game_config_v2_t *config,
    const rnet_client_security_t *client_security, rnet_runtime_t *out);
int32_t rnet_game_runtime_create_logged_v2(
    const rnet_game_config_v2_t *config,
    const rnet_client_security_t *client_security,
    const rnet_logger_v2_t *logger, rnet_runtime_t *out);
int32_t rnet_game_server_listen(rnet_runtime_t runtime,
                                const rnet_game_server_config_t *config,
                                rnet_endpoint_t *out);
int32_t rnet_game_server_listen_range(rnet_runtime_t runtime,
                                      const rnet_game_range_server_config_t *config,
                                      rnet_endpoint_t *out);
int32_t rnet_game_client_connect(rnet_runtime_t runtime,
                                 const rnet_game_client_config_t *config,
                                 rnet_endpoint_t *out);
int32_t rnet_game_client_connect_range(rnet_runtime_t runtime,
                                       const rnet_game_range_client_config_t *config,
                                       rnet_endpoint_t *out);
/* Resume always yields new network handles, then requires another AUTH decision.
 * The server emits RESUME_REQUEST and both sides receive SESSION_RESUMED. */
int32_t rnet_game_client_resume_connect(
    rnet_runtime_t runtime, const rnet_game_client_config_t *config,
    rnet_session_t old_session, rnet_slice_t resume_ticket,
    rnet_endpoint_t *out);
int32_t rnet_game_client_resume_connect_range(
    rnet_runtime_t runtime, const rnet_game_range_client_config_t *config,
    rnet_session_t old_session, rnet_slice_t resume_ticket,
    rnet_endpoint_t *out);
/* Query succeeds for a selected wire-v4 session, including pending server auth. */
int32_t rnet_game_selected_protocol_version(rnet_runtime_t runtime,
                                             rnet_session_t session, uint32_t *out);
int32_t rnet_game_issue_resume_ticket(rnet_runtime_t runtime,
                                      rnet_session_t session,
                                      rnet_slice_t identity);
int32_t rnet_game_endpoint_local_port(rnet_runtime_t runtime,
                                      rnet_endpoint_t endpoint, uint16_t *out_port);
int32_t rnet_game_auth_decide(rnet_runtime_t runtime,
                              rnet_session_t session, uint32_t accept);
int32_t rnet_game_send(rnet_runtime_t runtime, rnet_session_t session,
                       rnet_slice_t payload);
int32_t rnet_game_send_ex(rnet_runtime_t runtime, rnet_session_t session,
                          rnet_slice_t payload,
                          const rnet_game_send_options_t *options);
/* Best-effort coalescing before transport admission; already admitted reliable
 * messages cannot be withdrawn. The key is scoped to one session. */
int32_t rnet_game_send_latest(rnet_runtime_t runtime, rnet_session_t session,
                              uint64_t key, rnet_slice_t payload);
int32_t rnet_game_session_close(rnet_runtime_t runtime, rnet_session_t session);
int32_t rnet_game_endpoint_close(rnet_runtime_t runtime,
                                 rnet_endpoint_t endpoint);
int32_t rnet_game_rekey(rnet_runtime_t runtime, rnet_session_t session);
int32_t rnet_game_security_set(rnet_runtime_t runtime,
                               rnet_session_t session, uint32_t encrypted);
int32_t rnet_game_network_quality(rnet_runtime_t runtime,
                                  rnet_session_t session,
                                  rnet_game_quality_t *out);
int32_t rnet_game_clock_micros(rnet_runtime_t runtime, uint64_t *out);
int32_t rnet_game_clock_sync_snapshot(rnet_runtime_t runtime,
                                      rnet_session_t session,
                                      rnet_game_clock_sync_t *out);
/* Poll-driven cumulative latency logs; default 30000 ms, zero disables. */
int32_t rnet_game_metrics_log_interval_set(rnet_runtime_t runtime, uint64_t interval_ms);
/* Prometheus text has no per-player labels; release its nonzero token. */
int32_t rnet_game_prometheus_snapshot(rnet_runtime_t runtime,
                                      rnet_game_buffer_t *out);
int32_t rnet_game_poll_events_v2(rnet_runtime_t runtime,
                                 rnet_game_event_v2_t *events,
                                 size_t capacity, uint32_t timeout_ms,
                                 size_t *out_count);
int32_t rnet_game_buffer_release(rnet_runtime_t runtime, uint64_t token);
int32_t rnet_game_runtime_stop(rnet_runtime_t runtime,
                               uint32_t drain_timeout_ms);
int32_t rnet_game_runtime_destroy(rnet_runtime_t runtime);